# v3.7:
  * Ruri can now recognize [COMMAND [ARGS]...] without absolute path.
  * Add `-f` option: fork() before exec the command in container.
  * Fix unshare container joining ns.
  * Use pivot_root(2) instead of chroot(2) in unshare and rootless container.
  * Update easter egg: `ruri AwA`
# v3.6:
  * Add `uidmap` suid binary support, to fix setgroup() failed in rootless container.
  * ruri can now recognize CONTAINER_DIR path start without `.` or `/`.
  * `-q` option can now use qemu path on host.
  * Support architecture aliases for `-a` option (e.g. arm64=>aarch64).
  * General bug fixes.
# v3.5:
  * Capability can now be controled by value.
  * Support mount files to container.
  * General bug fixes.
# v3.4:
  * Default command wil be /bin/sh if /bin/su does not exist.
  * Fix mount image file.
  * Fix block device as root.
  * Fix configure script.
  * General bug fixes.
# v3.3:
  * Add github action, you can now download static binary.
  * Fix configure script.
  * Fix CAP_LAST_CAP.
  * Update libk2v.
  * Add comments in configs.
  * General bug fixes.
# v3.2:
  * Fix mountpoint in rootless container.
  * General bug fixes.
# v3.1:
  * Make .rurienv immutable.
  * Drop CapAmb && Clear CapInh.
  * Add cgroup support for cpuset and memory.
  * Add `-l` option: `--limit`.
  * Update seccomp profile.
  * Add a configure script.
  * General bug fixes.
# v3.0:
  * Remove daemon support.
  * Use libk2v for config files and .rurienv file.
  * Remove old `-d` `-D` `-K` `-l` `-t` `-T` option.
  * Add long args support.
  * `-d` option now aliases to `--drop`.
  * `-D` option now aliases to `--dump-config`.
  * Add `-o` option: `--output` for `-D`.
  * Add `-N` option: `--no-rurienv`.
  * Add `-R` option: `--read-only`.
  * Add `-M` option: `--ro-mount`.
  * Automatically unset $LD_PRELOAD before running container(Maybe will not work).
  * Fix `-U` option might also umount other mountpoints on host.
  * General bug fixes.
# v2.7:
  * Catch segfault.