@@ -10,6 +10,7 @@ ruri [参数]... [容器目录]... [命令 [参数]...]
 -V, --version-code ..........................: 显示版本代码
 -h, --help ..................................: 显示帮助
 -H, --show-examples .........................: 显示命令行示例
+-P, --ps [container_dir].....................: 显示容器进程信息
 ```
 这四个选项将显示相关信息。
 ********************************************
