@@ -92,12 +92,13 @@ void show_helps(void)
 	cprintf("{base}  -h, --help ..................................: Show helps\n");
 	cprintf("{base}  -H, --show-examples .........................: Show commandline examples\n");
 	cprintf("{base}  -U, --umount [container_dir] ................: Umount a container\n");
+	cprintf("{base}  -P, --ps [container_dir] ....................: Show process status of the container(*)\n");
 	cprintf("\n");
 	cprintf("{base}ARGS:\n");
 	cprintf("{base}  -D, --dump-config ...........................: Dump the config\n");
 	cprintf("{base}  -o, --output [config file] ..................: Set output file of `-D` option\n");
 	cprintf("{base}  -c, --config [config file] ..................: Use config file\n");
-	cprintf("{base}  -a, --arch [arch] ...........................: Simulate architecture via binfmt_misc/QEMU (*)\n");
+	cprintf("{base}  -a, --arch [arch] ...........................: Simulate architecture via binfmt_misc/QEMU (**)\n");
 	cprintf("{base}  -q, --qemu-path [path] ......................: Specify the path of QEMU\n");
 	cprintf("{base}  -u, --unshare ...............................: Enable unshare feature\n");
 	cprintf("{base}  -n, --no-new-privs ..........................: Set NO_NEW_PRIVS flag\n");
@@ -105,25 +106,26 @@ void show_helps(void)
 	cprintf("{base}  -s, --enable-seccomp ........................: Enable built-in Seccomp profile\n");
 	cprintf("{base}  -p, --privileged ............................: Run privileged container\n");
 	cprintf("{base}  -r, --rootless ..............................: Run rootless container\n");
-	cprintf("{base}  -k, --keep [cap] ............................: Keep the specified capability(**)\n");
+	cprintf("{base}  -k, --keep [cap] ............................: Keep the specified capability(***)\n");
 	cprintf("{base}  -d, --drop [cap] ............................: Drop the specified capability\n");
-	cprintf("{base}  -e, --env [env] [value] .....................: Set environment variables to its value (***)\n");
-	cprintf("{base}  -m, --mount [dir/dev/img/file] [target] .....: Mount dir/block-device/image/file to target (****)\n");
+	cprintf("{base}  -e, --env [env] [value] .....................: Set environment variables to its value (****)\n");
+	cprintf("{base}  -m, --mount [dir/dev/img/file] [target] .....: Mount dir/block-device/image/file to target (*****)\n");
 	cprintf("{base}  -M, --ro-mount [dir/dev/img/file] [target] ..: Mount dir/block-device/image/file as read-only\n");
 	cprintf("{base}  -S, --host-runtime ..........................: Bind-mount /dev/, /sys/ and /proc/ from host\n");
 	cprintf("{base}  -R, --read-only .............................: Mount / as read-only\n");
-	cprintf("{base}  -l, --limit [cpuset=cpu/memory=mem] .........: Set cpuset/memory limit(*****)\n");
+	cprintf("{base}  -l, --limit [cpuset=cpu/memory=mem] .........: Set cpuset/memory limit(******)\n");
 	cprintf("{base}  -w, --no-warnings ...........................: Disable warnings\n");
-	cprintf("{base}  -f, --fork ..................................: fork() before exec the command(******)\n");
+	cprintf("{base}  -f, --fork ..................................: fork() before exec the command(*******)\n");
 	cprintf("\n");
 	cprintf("{base}Note:\n");
-	cprintf("{base}(*)     : `-a` option also need `-q` is set\n");
-	cprintf("{base}(**)    : cap can both be value or name (e.j. cap_chown == 0)\n");
-	cprintf("{base}(***)   : Will not work if [COMMAND [ARGS]...] is like `/bin/su -`\n");
-	cprintf("{base}(****)  : You can use `-m [source] /` to mount a block device as root\n");
-	cprintf("{base}(*****) : Each `-l` option can only set one of the cpuset/memory limits\n");
+	cprintf("{base}(*)      : Will not work for unshare container without PID ns support\n");
+	cprintf("{base}(**)     : `-a` option also need `-q` is set\n");
+	cprintf("{base}(***)    : cap can both be value or name (e.j. cap_chown == 0)\n");
+	cprintf("{base}(****)   : Will not work if [COMMAND [ARGS]...] is like `/bin/su -`\n");
+	cprintf("{base}(*****)  : You can use `-m [source] /` to mount a block device as root\n");
+	cprintf("{base}(******) : Each `-l` option can only set one of the cpuset/memory limits\n");
 	cprintf("{base}          for example: `ruri -l memory=1M -l cpuset=1 /test`\n");
-	cprintf("{base}(******): This option is for getting ruri process status with `ps` command\n");
+	cprintf("{base}(*******): This option is for getting ruri process status with `ps` command\n");
 	cprintf("{base}{clear}\n");
 }
 // For `ruri -H`.
